[gd_scene load_steps=20 format=2]

[ext_resource path="res://FlatMap.gd" type="Script" id=1]
[ext_resource path="res://map_assets/barren land.jpg" type="Texture" id=2]
[ext_resource path="res://map_assets/tiles3.tres" type="TileSet" id=3]
[ext_resource path="res://Goal.gd" type="Script" id=4]
[ext_resource path="res://ring.png" type="Texture" id=5]
[ext_resource path="res://ring1.png" type="Texture" id=6]
[ext_resource path="res://PhazonParticle7.png" type="Texture" id=7]
[ext_resource path="res://fonts/KOMIKAX_.ttf" type="DynamicFontData" id=8]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=2]

resource_name = "turn"
length = 60.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RingAnim/Ring:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 30, 60 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="Gradient" id=3]

offsets = PoolRealArray( 0, 0.408284, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]

flags = 4
gradient = SubResource( 3 )
width = 2048

[sub_resource type="ParticlesMaterial" id=5]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, -90, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 90.0
angle_random = 1.0
scale = 1.0
scale_random = 0.0
color_ramp = SubResource( 4 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Gravity" ]

[sub_resource type="Gradient" id=6]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.414353 )

[sub_resource type="GradientTexture" id=7]

flags = 4
gradient = SubResource( 6 )
width = 2048

[sub_resource type="Curve" id=8]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.84375 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]

flags = 4
width = 2048
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, -90, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 70.0
angle_random = 1.0
scale = 1.5
scale_random = 0.8
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Gravity", "Scale" ]

[sub_resource type="DynamicFont" id=11]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="FlatMap" type="Node" index="0"]

script = ExtResource( 1 )

[node name="TempBackground" type="Sprite" parent="." index="0"]

position = Vector2( 963.904, 542.019 )
scale = Vector2( 1.26952, 1.02641 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -262118, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0 )

[node name="Goal" type="Area2D" parent="." index="2"]

self_modulate = Color( 0.914062, 0.0535583, 0.0535583, 1 )
position = Vector2( 1379.7, 281.309 )
scale = Vector2( 1.7, 1.7 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Transform", "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="GoalCollision" type="CollisionShape2D" parent="Goal" index="0"]

scale = Vector2( 4.4, 4.4 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Aura" type="Sprite" parent="Goal" index="1"]

position = Vector2( -1, -1 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="RingAnim" type="AnimationPlayer" parent="Goal" index="2"]

root_node = NodePath("..")
autoplay = "turn"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/turn = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Ring" type="Sprite" parent="Goal/RingAnim" index="0"]

position = Vector2( 1378, 279.609 )
rotation = 4.71239
scale = Vector2( 0.204, 0.204 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Fire" type="Node2D" parent="Goal" index="3"]

scale = Vector2( 1.2, 1.2 )
_sections_unfolded = [ "Transform" ]

[node name="particles_tail" type="Particles2D" parent="Goal/Fire" index="0"]

scale = Vector2( 0.9, 1 )
emitting = true
amount = 5
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 5 )
texture = ExtResource( 7 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time" ]

[node name="particles_main" type="Particles2D" parent="Goal/Fire" index="1"]

emitting = true
amount = 20
lifetime = 0.35
one_shot = false
preprocess = 0.0
speed_scale = 3.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 10 )
texture = ExtResource( 7 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Material", "Process Material", "Textures", "Time", "Transform" ]

[node name="MatchTime" type="Label" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -28.0
margin_right = 75.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "180"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="GoalPosition1" type="Position2D" parent="." index="4"]

position = Vector2( 1374.84, 278.257 )
_sections_unfolded = [ "Transform" ]

[node name="GoalPosition2" type="Position2D" parent="." index="5"]

position = Vector2( 519.021, 900.89 )
_sections_unfolded = [ "Transform" ]

[node name="GoalPosition3" type="Position2D" parent="." index="6"]

position = Vector2( 1746.55, 917.25 )
scale = Vector2( 0.99275, 1 )
_sections_unfolded = [ "Transform" ]

[node name="GoalPosition4" type="Position2D" parent="." index="7"]

position = Vector2( 233.015, 622 )
scale = Vector2( 0.980492, 0.900002 )
_sections_unfolded = [ "Transform", "Visibility" ]


